<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="	#dfe3ee"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="422dp"
        android:layout_height="174dp"
        android:layout_marginBottom="621dp"
        android:background="#3b5998"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="Correo Electronico"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="Contraseña"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="179dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="No cerrar Sesion"
        android:textColor="	#dfe3ee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="¿Has olvidado tu contraseña?"
        android:textColor="	#dfe3ee"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="226dp"
        android:layout_height="41dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:includeFontPadding="true"
        android:text="Registrate "
        android:textColor="#29487d"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="Es gratis y lo seguira siendo"
        android:textColor="#29487d"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="Nombre"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:text="Apellido"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="79dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="Tu Direccion de correo electronico"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="76dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="Contraseña Nueva"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:text="Sexo"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="70dp"
        android:layout_height="39dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Fecha de nacimiento"
        android:textColor="#29487d"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/idnombre"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtnombres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/idapellido"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="20dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtapellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/idcorreo"
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="20dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/txtcorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idapellido" />

    <EditText
        android:id="@+id/idcontraseña"
        android:layout_width="214dp"
        android:layout_height="32dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="25dp"
        android:background="#e9ebee"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txtcontraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idcorreo" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="215dp"
        android:layout_height="31dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="25dp"
        android:background="#e9ebee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idcontraseña" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:backgroundTint="#67b868"
        android:text="@string/botonregister"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/idfecha"
        android:layout_width="217dp"
        android:layout_height="28dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="25dp"
        android:background="	#e9ebee"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="71dp"
        android:layout_height="39dp"
        android:layout_marginStart="324dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@android:drawable/ic_menu_myplaces" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="43dp"
        android:layout_height="51dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="46dp"
        android:layout_height="38dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="344dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="340dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@android:drawable/ic_menu_month" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:text="Crear una pagina "
        android:textColor="#1d3469"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:text="Para un famoso , grupo de musica o empresa"
        android:textColor="#333333"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="52dp"
        android:background="?android:attr/listDivider"
        android:backgroundTint="	#3a5795"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>